--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,21 @@
+:root{
+  --cor1: #002a3a;
+
+  --cor2: #ffa400;
+  --cor3: #ee2737;
+
+  --cor4: #87189D;
+  --cor5: #171C8F;
+
+  --cor6: #EF4B81;
+  --cor7: #FF7F41;
+
+  --cor8: #0077C8;
+  --cor9: #26D07C;
+
+  --cor10: #dcdcdc;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -10,15 +28,15 @@ body {
 
 /*===================== SEÇÃO MENU======================== */
 .header-container {
-  max-width: 1920px;
-  height: 100px;
-  background-color: #002a3a;
+  max-width: 120em; /* 1920px/16px = 120em  */
+  height: 6.25em; /* 100px/16px = 120em  */
+  background-color: var(--cor1);
 }
 
 .container-menu {
-  max-width: 1100px;
+  max-width: 68.75em;
   margin: 0 auto;
-  height: 100px;
+  height: 6.25em;
   display: grid;
   grid-template-columns: auto 1fr;
   align-items: center;
@@ -28,12 +46,12 @@ body {
 .menu {
   display: flex;
   justify-content: flex-end;
-  gap: 15px;
+  gap: 0.9375em;
   list-style: none;
 }
 
 .menu-logo img {
-  margin-top: 10px;
+  margin-top: 0.625em;
 }
 
 .menu li a {
@@ -41,23 +59,22 @@ body {
   font-family: 'Sora';
   color: #fff;
   text-decoration: none;
-  /* text-transform: uppercase; */
-  padding: 10px 20px;
+  padding: 0.625em 1.25em;
   position: relative;
 }
 
 .menu li a:hover:not(.link-ofertas) {
-  color: #ffa400;
+  color: var(--cor2);
 }
 
 .link-ofertas {
-  background: linear-gradient(120deg, rgb(238, 39, 55), rgb(255, 164, 0));
+  background: linear-gradient(120deg, var(--cor3), var(--cor2));
   border-radius: 5px;
 }
 
 .galery {
-  margin: 20px auto;
-  max-width: 1100px;
+  margin: 1.25em auto;
+  max-width: 68.75em;
   height: calc(90vh - 80px);
   overflow: hidden;
 }
@@ -110,13 +127,13 @@ body {
 
 /*====================== SECTION VIDEO======================= */
 .video {
-  padding: 65px;
+  padding: 4.0625em;
 }
 
 .video-container,
 .app-container,
 .agenda-container {
-  width: 1100px;
+  width: 68.75em;
   flex-wrap: wrap;
   margin: auto;
   display: grid;
@@ -130,15 +147,15 @@ body {
   place-items: start;
   justify-self: center;
   justify-content: space-between;
-  width: 360px;
-  padding: 0px 20px 0 10px;
+  width: 22.5em;
+  padding: 0px 1.25em 0 .625em;
 }
 
 .horario h2 {
   font-family: "Sora";
-  font-size: 30px;
+  font-size: 1.875em;
   font-weight: 700;
-  background-image: linear-gradient(to right, rgb(38, 208, 124), rgb(0, 119, 200));
+  background-image: linear-gradient(to right, var(--cor9), var(--cor8));
   background-clip: text;
   background-size: 100%;
   -webkit-background-clip: text;
@@ -154,44 +171,44 @@ body {
 
 .btn-youtube {
   display: flex;
-  gap: 15px;
+  gap: 0.9375em;
   justify-self: flex-start;
-  padding: 10px 20px;
-  border-radius: 5px;
+  padding: 0.625em 1.25em;
+  border-radius: 0.3125em;
   text-decoration: none;
   font-family: "Roboto";
   font-weight: 500;
   color: #fff;
-  background: linear-gradient(to right, rgb(0, 119, 200), rgb(38, 208, 124));
+  background: linear-gradient(to right, var(--cor8), var(--cor9));
 }
 
 .btn-youtube img {
-  width: 25px;
+  width: 1.5625em;
   color: #fff;
 }
 
 .video-celebracao{
   box-shadow:0px 0px 0px 10px #fff;
-  border-radius: 15px;
+  border-radius: 0.9375em;
 }
 
 /*======================= SECTION APP=========================== */
 .app {
   background-color: #dcdcdc;
-  padding: 65px;
+  padding: 4.0625em;
 }
 
 .app-informacoes {
-  width: 450px;
+  width: 28.125em;
   justify-self: end;
-  gap: 15px;
+  gap: 0.9375em;
 }
 
 .app-informacoes h2 {
   font-family: "Sora";
-  font-size: 30px;
+  font-size: 1.875em;
   font-weight: 700;
-  background-image: linear-gradient(to right, rgb(135, 24, 157), rgb(23, 28, 143));
+  background-image: linear-gradient(to right, var(--cor4), var(--cor5));
   background-clip: text;
   background-size: 100%;
   -webkit-background-clip: text;
@@ -203,13 +220,13 @@ body {
 .app-informacoes p {
   font-family: "Roboto";
   color: #666;
-  font-size: 15px;
+  font-size: 0.9375em;
 }
 
 .btn-app {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: 10px;
+  gap: 0.625em;
 }
 
 .btn-app a {
@@ -220,13 +237,13 @@ body {
 }
 
 .logo-apple {
-  font-size: 35px;
+  font-size: 2.1875em;
   color: #000;
 }
 
 .btn-app-store,
 .btn-google-store {
-  background: linear-gradient(#dcdcdc, #dcdcdc) padding-box, linear-gradient(45deg, rgb(135, 24, 157), rgb(23, 28, 143)) border-box;
+  background: linear-gradient(var(--cor10), var(--cor10)) padding-box, linear-gradient(45deg, var(--cor4), var(--cor5)) border-box;
   border: 3.5px solid transparent;
   border-radius: 10px;
   padding: 5px 10px;
@@ -244,19 +261,19 @@ body {
 /*===================== SEÇÃO AGENDA ========================*/
 
 .agenda{
-  padding: 65px;
+  padding: 4.0625em;
 }
 .agenda-container{
-  width: 880px;
-  grid-template-columns: 300px 1fr;
-  gap: 60px;
+  width: 55em;
+  grid-template-columns: 18.75em 1fr;
+  gap: 3.75em;
 }
 
 .agenda-container h2 {
   font-family: "Sora";
-  font-size: 30px;
+  font-size: 1.875em;
   font-weight: 700;
-  background-image: linear-gradient(to right, rgb(0,119, 200), rgb(38, 208, 124));
+  background-image: linear-gradient(to right, var(--cor8), var(--cor9));
   background-clip: text;
   background-size: 100%;
   -webkit-background-clip: text;
@@ -268,38 +285,48 @@ body {
 .agenda-container p{
   font-family: "Roboto";
   color: #666;
-  font-size: 15px;
-  margin-top: 20px;
+  font-size: 0.9375em;
+  margin-top: 1.25em;
 }
 
 .agenda-bloco{
   font-family: "Roboto";
   color: #666;
-  padding: 15px 0;
-  margin-bottom: 28px;
+  padding: 0.93754em 0;
+  margin-bottom: 1.875em;
 
-  background: linear-gradient(#fff, #fff) padding-box, linear-gradient(45deg, rgb(0, 119, 200), rgb(38, 208, 124)) border-box;
+  background: linear-gradient(#fff, #fff) padding-box, linear-gradient(45deg, var(--cor8), var(--cor9)) border-box;
   border-bottom: 3.5px solid transparent;
 }
 .agenda-flex{
-  margin-top: 20px;
+  margin-top: 1.25em;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  row-gap: 15px;
+  row-gap: 0.9375em;
   align-items: center;
 }
+.domingo{
+  padding-bottom: 0.625em;
+  border-bottom: 2px solid var(--cor10);
+}
 
+/* TAMANHOS VARIADOS DAS SUBMARCAS */
 .agenda-bloco img{
-  width: 100px;
+  width: 6.25em;
 }
 .agenda-bloco .submarca-celebrando{
-  width: 150px;
+  width: 9.375em;
 }
 .agenda-bloco .submarca-idv,
 .agenda-bloco .submarca-vertical,
 .agenda-bloco .submarca-kids{
-  width: 90px;
+  width: 5.625em;
 }
 .agenda-bloco a .icone-instagram{
-  width: 10px;
+  width: .9375em;
+}
+
+.agenda-flex a{
+  text-decoration: none;
+  color: var(--cor1);
 }
