finalizado rodape laranja

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -364,7 +364,7 @@ body {
   column-gap: 80px;
 }
 .dizimos-container div{
-  border-right: 1px solid red;
+  border-right: 1px solid var(--cor3);
 }
 
 .dizimos-container h2 {
@@ -376,4 +376,42 @@ body {
   flex-direction: column;
   gap: 5px;
   justify-content: center;
+}
+
+/* ===========================FOOTER========================== */
+.footer {
+  padding: 80px;
+  background-image: linear-gradient(to right, var(--cor3), var(--cor2));
+}
+
+.footer-container{
+  font-size: 20px;
+  font-family: "Roboto";
+  color: #fff;
+  width: 55em;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  margin: auto;
+  align-items: center;
+}
+
+.footer-container img{
+  width: 200px;
+}
+
+.footer-flex{
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  justify-content: center;
+}
+
+.footer-flex img{
+  width: 15px;
+  stroke: #fff;
+}
+
+.footer-icones{
+  justify-self: end;
+  font-size: 50px;
 }
