--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,140 +1,79 @@
-@import "titulos.css";
-
-:root {
-  --cor1: #002a3a;
-
-  --cor2: #ffa400;
-  --cor3: #ee2737;
-
-  --cor4: #87189D;
-  --cor5: #171C8F;
-
-  --cor6: #EF4B81;
-  --cor7: #FF7F41;
-
-  --cor8: #0077C8;
-  --cor9: #26D07C;
-
-  --cor10: #dcdcdc;
-
-}
-
+@charset "UTF-8";
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
-}
+  box-sizing: border-box; }
 
 body {
-  font-family: 'Sora';
-}
+  font-family: 'Sora'; }
 
 /*===================== SEÇÃO MENU======================== */
-.header-container {
+.header {
   max-width: 120em;
-  /* 1920px/16px = 120em  */
   height: 6.25em;
-  /* 100px/16px = 120em  */
-  background-color: var(--cor1);
-}
+  background-color: #002a3a; }
+  .header_menu {
+    max-width: 68.75em;
+    margin: 0 auto;
+    height: 6.25em;
+    display: grid;
+    grid-template-columns: auto 1fr;
+    align-items: center; }
+    .header_menu_logo {
+      margin-top: 0.625em; }
 
-.container-menu {
-  max-width: 68.75em;
-  margin: 0 auto;
-  height: 6.25em;
-  display: grid;
-  grid-template-columns: auto 1fr;
-  align-items: center;
-}
-
-
-.menu {
+.header_menu_link {
   display: flex;
   justify-content: flex-end;
   gap: 0.9375em;
-  list-style: none;
-}
-
-.menu-logo img {
-  margin-top: 0.625em;
-}
-
-.menu li a {
-  display: inline-block;
-  font-family: 'Sora';
-  color: #fff;
-  text-decoration: none;
-  padding: 0.625em 1.25em;
-  /* position: relative; */
-}
-
-.menu li a:hover:not(.link-ofertas) {
-  color: var(--cor2);
-}
-
-.link-ofertas {
-  background: linear-gradient(120deg, var(--cor3), var(--cor2));
-  border-radius: 5px;
-  /* flex-grow: 2; */
-}
+  list-style: none; }
+  .header_menu_link a {
+    display: inline-block;
+    font-family: 'Sora';
+    color: #fff;
+    text-decoration: none;
+    padding: 0.625em 1.25em; }
+    .header_menu_link a:hover:not(.link-ofertas) {
+      color: #ffa400; }
+  .header_menu_link .link-ofertas {
+    background: linear-gradient(120deg, #ee2737, #ffa400);
+    border-radius: 5px; }
 
 .galery {
   margin: 1.25em auto;
   max-width: 68.75em;
   height: calc(90vh - 80px);
-  overflow: hidden;
-}
-
-.galery .fotos {
-  width: 500%;
-  animation-name: animacao;
-  animation-duration: 30s;
-  animation-iteration-count: infinite;
-}
-
-.galery .fotos img {
-  width: 20%;
-  height: calc(90vh - 80px);
-}
+  overflow: hidden; }
+  .galery_fotos {
+    width: 500%;
+    animation-name: animacao;
+    animation-duration: 30s;
+    animation-iteration-count: infinite; }
+    .galery_fotos img {
+      width: 20%;
+      height: calc(90vh - 80px); }
 
 @keyframes animacao {
   0% {
-    margin-left: 0;
-  }
-
+    margin-left: 0; }
   20% {
-    margin-left: 0;
-  }
-
+    margin-left: 0; }
   25% {
-    margin-left: -100%;
-  }
-
+    margin-left: -100%; }
   45% {
-    margin-left: -100%;
-  }
-
+    margin-left: -100%; }
   50% {
-    margin-left: -201%;
-  }
-
+    margin-left: -201%; }
   70% {
-    margin-left: -201%;
-  }
-
+    margin-left: -201%; }
   90% {
-    margin-left: -300%;
-  }
-
+    margin-left: -300%; }
   100% {
-    margin-left: -300%;
-  }
-}
+    margin-left: -300%; } }
 
 /*====================== SECTION VIDEO======================= */
 .video {
-  padding: 4.0625em;
-}
+  padding: 4.0625em; }
 
 .video-container,
 .app-container,
@@ -144,9 +83,7 @@ body {
   flex-wrap: wrap;
   margin: auto;
   display: grid;
-  grid-template-columns: 1fr 1fr;
-
-}
+  grid-template-columns: 1fr 1fr; }
 
 .horario,
 .app-informacoes {
@@ -156,14 +93,11 @@ body {
   justify-self: center;
   justify-content: space-between;
   width: 22.5em;
-  padding: 0px 1.25em 0 .625em;
-}
-
+  padding: 0px 1.25em 0 .625em; }
 
 .horario div {
   font-family: "Roboto";
-  color: #002a3a;
-}
+  color: #002a3a; }
 
 .btn-youtube {
   display: flex;
@@ -175,131 +109,107 @@ body {
   font-family: "Roboto";
   font-weight: 500;
   color: #fff;
-  background: linear-gradient(to right, var(--cor8), var(--cor9));
-}
+  background: linear-gradient(to right, #0077C8, #26D07C); }
 
 .btn-youtube img {
   width: 1.5625em;
-  color: #fff;
-}
+  color: #fff; }
 
 .video-celebracao {
   box-shadow: 0px 0px 0px 10px #fff;
-  border-radius: 0.9375em;
-}
+  border-radius: 0.9375em; }
 
 /*======================= SECTION APP=========================== */
 .app {
   background-color: #dcdcdc;
-  padding: 4.0625em;
-
-}
+  padding: 4.0625em; }
 
 .app-informacoes {
   width: 28.125em;
   justify-self: end;
-  gap: 0.9375em;
-}
+  gap: 0.9375em; }
 
 .app-informacoes p {
   font-family: "Roboto";
   color: #666;
-  font-size: 0.9375em;
-}
+  font-size: 0.9375em; }
 
 .btn-app {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: 0.625em;
-}
+  gap: 0.625em; }
 
 .btn-app a {
   text-decoration: none;
   color: #000;
   font-family: "Roboto";
-  font-weight: 500;
-}
+  font-weight: 500; }
 
 .logo-apple {
   font-size: 2.1875em;
-  color: #000;
-}
+  color: #000; }
 
 .btn-app-store,
 .btn-google-store {
-  background: linear-gradient(var(--cor10), var(--cor10)) padding-box, linear-gradient(45deg, var(--cor4), var(--cor5)) border-box;
+  background: linear-gradient(#dcdcdc, #dcdcdc) padding-box, linear-gradient(45deg, #87189D, #171C8F) border-box;
   border: 3.5px solid transparent;
   border-radius: 10px;
   padding: 5px 10px;
   display: flex;
   align-items: center;
-  gap: 5px;
-}
+  gap: 5px; }
 
 .video-app {
   box-shadow: 0px 0px 0px 10px #dcdcdc;
-  border-radius: 15px;
-}
-
+  border-radius: 15px; }
 
 /*===================== SEÇÃO AGENDA ========================*/
-
 .agenda {
-  padding: 4.0625em 4.0625em 0 4.0625em;
-}
+  padding: 4.0625em 4.0625em 0 4.0625em; }
 
 .agenda-imagens {
   display: flex;
   flex-direction: column;
   gap: 60px;
   align-items: flex-start;
-  margin-bottom: 60px;
-}
+  margin-bottom: 60px; }
 
 .agenda-container {
   width: 55em;
   grid-template-columns: 18.75em 1fr;
-  gap: 3.75em;
-}
+  gap: 3.75em; }
 
 .agenda-container p {
   font-family: "Roboto";
   color: #666;
   font-size: 0.9375em;
-  margin-top: 1.25em;
-}
+  margin-top: 1.25em; }
 
 .agenda-bloco {
   font-family: "Roboto";
   color: #666;
   padding: 0.93754em 0;
   margin-bottom: 1.875em;
-
-  background: linear-gradient(#fff, #fff) padding-box, linear-gradient(45deg, var(--cor8), var(--cor9)) border-box;
-  border-bottom: 3.5px solid transparent;
-}
+  background: linear-gradient(#fff, #fff) padding-box, linear-gradient(45deg, #0077C8, #26D07C) border-box;
+  border-bottom: 3.5px solid transparent; }
 
 .agenda-flex {
   margin-top: 1.25em;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   row-gap: 0.9375em;
-  align-items: center;
-}
+  align-items: center; }
 
 .agenda-container p {
-  margin-bottom: 3.75em;
-}
+  margin-bottom: 3.75em; }
 
 .domingo {
   padding-bottom: 0.625em;
-  border-bottom: 2px solid var(--cor10);
-}
+  border-bottom: 2px solid #dcdcdc; }
 
 /* TAMANHOS VARIADOS DAS SUBMARCAS */
 .agenda-bloco img {
-  width: 6.25em;
-}
+  width: 6.25em; }
 
 .agenda-imagens .submarca-idv,
 .agenda-imagens .submarca-kids,
@@ -307,25 +217,19 @@ body {
 .agenda-imagens .submarca-cafe {
   width: 200px;
   filter: brightness(0);
-  opacity: 15%;
-
-}
+  opacity: 15%; }
 
 .agenda-bloco a .icone-instagram {
-  width: .9375em;
-}
+  width: .9375em; }
 
 .agenda-flex a {
   text-decoration: none;
-  color: var(--cor1);
-}
+  color: #002a3a; }
 
 /* ==================AREAS============================= */
-
 .areas {
   padding: 60px;
-  /* background-color: var(--cor10); */
-}
+  /* background-color: var(--cor10); */ }
 
 .areas-container {
   flex-wrap: wrap;
@@ -334,29 +238,24 @@ body {
   grid-template-columns: 10em 10em 10em 10em 10em 10em 10em;
   justify-items: center;
   align-items: center;
-  gap: 20px;
-}
+  gap: 20px; }
 
 .area-titulo-posicao {
   margin-bottom: 30px;
-  margin-left: 200px;
-}
+  margin-left: 200px; }
 
 .areas-container a img {
   width: 130px;
-  padding: 10px;
-}
+  padding: 10px; }
 
 .areas-container a img:hover {
   transition: all .6s;
-  transform: scale(1.5);
-}
+  transform: scale(1.5); }
 
 /* ===================DÍZIMOS E OFERTAS================== */
 .dizimos {
   padding: 60px;
-  background-color: var(--cor10);
-}
+  background-color: #dcdcdc; }
 
 .dizimos-container {
   width: 55em;
@@ -364,30 +263,26 @@ body {
   color: var(--cor1);
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  column-gap: 80px;
-}
-.dizimos-container div{
-  border-right: 1px solid var(--cor3);
-}
+  column-gap: 80px; }
+
+.dizimos-container div {
+  border-right: 1px solid #ee2737; }
 
 .dizimos-container h2 {
-  grid-column: 1/4;
-}
+  grid-column: 1/4; }
 
 .dizimos-flex {
   display: flex;
   flex-direction: column;
   gap: 5px;
-  justify-content: center;
-}
+  justify-content: center; }
 
 /* ===========================FOOTER========================== */
 .footer {
   padding: 80px;
-  background-image: linear-gradient(to right, var(--cor3), var(--cor2));
-}
+  background-image: linear-gradient(to right, #ee2737, #ffa400); }
 
-.footer-container{
+.footer-container {
   font-size: 20px;
   font-family: "Roboto";
   color: #fff;
@@ -395,26 +290,21 @@ body {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   margin: auto;
-  align-items: center;
-}
+  align-items: center; }
 
-.footer-container img{
-  width: 200px;
-}
+.footer-container img {
+  width: 200px; }
 
-.footer-flex{
+.footer-flex {
   display: flex;
   flex-direction: column;
   gap: 10px;
-  justify-content: center;
-}
+  justify-content: center; }
 
-.footer-flex img{
+.footer-flex img {
   width: 15px;
-  stroke: #fff;
-}
+  stroke: #fff; }
 
-.footer-icones{
+.footer-icones {
   justify-self: end;
-  font-size: 50px;
-}
+  font-size: 50px; }
