arquitetura1 do projeto

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,410 +1,10 @@
-$cor1: #002a3a;
-$cor2: #ffa400;
-$cor3: #ee2737;
-
-$cor4: #87189D;
-$cor5: #171C8F;
-
-$cor6: #EF4B81;
-$cor7: #FF7F41;
-
-$cor8: #0077C8;
-$cor9: #26D07C;
-$cor10: #dcdcdc;
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-body {
-  font-family: 'Sora';
-}
-
-/*===================== SEÇÃO MENU======================== */
-.header{
-  max-width: 120em;
-  height: 6.25em;
-  background-color: $cor1;
-
-    &_menu{
-      max-width: 68.75em;
-      margin: 0 auto;
-      height: 6.25em;
-      display: grid;
-      grid-template-columns: auto 1fr;
-      align-items: center;
-
-      &_logo{
-        margin-top: 0.625em;
-      }
-    }
-  }
-
-.header_menu_link {
-    display: flex;
-    justify-content: flex-end;
-    gap: 0.9375em;
-    list-style: none;
-
-      a{
-        display: inline-block;
-        font-family: 'Sora';
-        color: #fff;
-        text-decoration: none;
-        padding: 0.625em 1.25em;
-
-        &:hover:not(.link-ofertas){
-          color: $cor2;
-        }
-    }
-    .link-ofertas {
-      background: linear-gradient(120deg, $cor3, $cor2);
-      border-radius: 5px;
-    }
-}
-
-
-.galery{
-  margin: 1.25em auto;
-  max-width: 68.75em;
-  height: calc(90vh - 80px);
-  overflow: hidden;
-
-    &_fotos{
-      width: 500%;
-      animation-name: animacao;
-      animation-duration: 30s;
-      animation-iteration-count: infinite;
-
-        img {
-          width: 20%;
-          height: calc(90vh - 80px);
-        }
-    }
-}
-
-
-@keyframes animacao {
-  0% {
-    margin-left: 0;
-  }
-
-  20% {
-    margin-left: 0;
-  }
-
-  25% {
-    margin-left: -100%;
-  }
-
-  45% {
-    margin-left: -100%;
-  }
-
-  50% {
-    margin-left: -201%;
-  }
-
-  70% {
-    margin-left: -201%;
-  }
-
-  90% {
-    margin-left: -300%;
-  }
-
-  100% {
-    margin-left: -300%;
-  }
-}
-
-/*====================== SECTION VIDEO======================= */
-.video {
-  padding: 4.0625em;
-}
-
-.video-container,
-.app-container,
-.agenda-container,
-.dizimos-container {
-  width: 68.75em;
-  flex-wrap: wrap;
-  margin: auto;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-
-}
-
-.horario,
-.app-informacoes {
-  display: flex;
-  flex-direction: column;
-  place-items: start;
-  justify-self: center;
-  justify-content: space-between;
-  width: 22.5em;
-  padding: 0px 1.25em 0 .625em;
-}
-
-
-.horario div {
-  font-family: "Roboto";
-  color: #002a3a;
-}
-
-.btn-youtube {
-  display: flex;
-  gap: 0.9375em;
-  justify-self: flex-start;
-  padding: 0.625em 1.25em;
-  border-radius: 0.3125em;
-  text-decoration: none;
-  font-family: "Roboto";
-  font-weight: 500;
-  color: #fff;
-  background: linear-gradient(to right, $cor8, $cor9);
-}
-
-.btn-youtube img {
-  width: 1.5625em;
-  color: #fff;
-}
-
-.video-celebracao {
-  box-shadow: 0px 0px 0px 10px #fff;
-  border-radius: 0.9375em;
-}
-
-/*======================= SECTION APP=========================== */
-.app {
-  background-color: $cor10;
-  padding: 4.0625em;
-
-}
-
-.app-informacoes {
-  width: 28.125em;
-  justify-self: end;
-  gap: 0.9375em;
-}
-
-.app-informacoes p {
-  font-family: "Roboto";
-  color: #666;
-  font-size: 0.9375em;
-}
-
-.btn-app {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 0.625em;
-}
-
-.btn-app a {
-  text-decoration: none;
-  color: #000;
-  font-family: "Roboto";
-  font-weight: 500;
-}
-
-.logo-apple {
-  font-size: 2.1875em;
-  color: #000;
-}
-
-.btn-app-store,
-.btn-google-store {
-  background: linear-gradient($cor10, $cor10) padding-box, linear-gradient(45deg, $cor4, $cor5) border-box;
-  border: 3.5px solid transparent;
-  border-radius: 10px;
-  padding: 5px 10px;
-  display: flex;
-  align-items: center;
-  gap: 5px;
-}
-
-.video-app {
-  box-shadow: 0px 0px 0px 10px $cor10;
-  border-radius: 15px;
-}
-
-
-/*===================== SEÇÃO AGENDA ========================*/
-
-.agenda {
-  padding: 4.0625em 4.0625em 0 4.0625em;
-}
-
-.agenda-imagens {
-  display: flex;
-  flex-direction: column;
-  gap: 60px;
-  align-items: flex-start;
-  margin-bottom: 60px;
-}
-
-.agenda-container {
-  width: 55em;
-  grid-template-columns: 18.75em 1fr;
-  gap: 3.75em;
-}
-
-.agenda-container p {
-  font-family: "Roboto";
-  color: #666;
-  font-size: 0.9375em;
-  margin-top: 1.25em;
-}
-
-.agenda-bloco {
-  font-family: "Roboto";
-  color: #666;
-  padding: 0.93754em 0;
-  margin-bottom: 1.875em;
-
-  background: linear-gradient(#fff, #fff) padding-box, linear-gradient(45deg, $cor8, $cor9) border-box;
-  border-bottom: 3.5px solid transparent;
-}
-
-.agenda-flex {
-  margin-top: 1.25em;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  row-gap: 0.9375em;
-  align-items: center;
-}
-
-.agenda-container p {
-  margin-bottom: 3.75em;
-}
-
-.domingo {
-  padding-bottom: 0.625em;
-  border-bottom: 2px solid $cor10;
-}
-
-/* TAMANHOS VARIADOS DAS SUBMARCAS */
-.agenda-bloco img {
-  width: 6.25em;
-}
-
-.agenda-imagens .submarca-idv,
-.agenda-imagens .submarca-kids,
-.agenda-imagens .submarca-celebrando,
-.agenda-imagens .submarca-cafe {
-  width: 200px;
-  filter: brightness(0);
-  opacity: 15%;
-
-}
-
-.agenda-bloco a .icone-instagram {
-  width: .9375em;
-}
-
-.agenda-flex a {
-  text-decoration: none;
-  color: $cor1;
-}
-
-/* ==================AREAS============================= */
-
-.areas {
-  padding: 60px;
-  /* background-color: var(--cor10); */
-}
-
-.areas-container {
-  flex-wrap: wrap;
-  margin: auto;
-  display: grid;
-  grid-template-columns: 10em 10em 10em 10em 10em 10em 10em;
-  justify-items: center;
-  align-items: center;
-  gap: 20px;
-}
-
-.area-titulo-posicao {
-  margin-bottom: 30px;
-  margin-left: 200px;
-}
-
-.areas-container a img {
-  width: 130px;
-  padding: 10px;
-}
-
-.areas-container a img:hover {
-  transition: all .6s;
-  transform: scale(1.5);
-}
-
-/* ===================DÍZIMOS E OFERTAS================== */
-.dizimos {
-  padding: 60px;
-  background-color: $cor10;
-}
-
-.dizimos-container {
-  width: 55em;
-  font-family: "Roboto";
-  color: var(--cor1);
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  column-gap: 80px;
-}
-
-.dizimos-container div {
-  border-right: 1px solid $cor3;
-}
-
-.dizimos-container h2 {
-  grid-column: 1/4;
-}
-
-.dizimos-flex {
-  display: flex;
-  flex-direction: column;
-  gap: 5px;
-  justify-content: center;
-}
-
-/* ===========================FOOTER========================== */
-.footer {
-  padding: 80px;
-  background-image: linear-gradient(to right, $cor3, $cor2);
-}
-
-.footer-container {
-  font-size: 20px;
-  font-family: "Roboto";
-  color: #fff;
-  width: 55em;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  margin: auto;
-  align-items: center;
-}
-
-.footer-container img {
-  width: 200px;
-}
-
-.footer-flex {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  justify-content: center;
-}
-
-.footer-flex img {
-  width: 15px;
-  stroke: #fff;
-}
-
-.footer-icones {
-  justify-self: end;
-  font-size: 50px;
-}
+@import 'base';
+@import 'variaveis';
+@import 'header';
+@import 'galery';
+@import 'video';
+@import 'app';
+@import 'agenda';
+@import 'areas';
+@import 'dizimos';
+@import 'footer';
