--- a/assets/sass/_agenda.scss
+++ b/assets/sass/_agenda.scss
@@ -1,69 +1,67 @@
 .agenda {
   padding: 4.0625em 4.0625em 0 4.0625em;
+
+  &_container {
+    width: 55em;
+    display: grid;
+    grid-template-columns: 18.75em 1fr;
+    margin: auto;
+    gap: 3.75em;
+
+    &_imagens {
+      display: flex;
+      flex-direction: column;
+      gap: 60px;
+      align-items: flex-start;
+      margin-bottom: 60px;
+
+      img {
+        width: 180px;
+        filter: brightness(0);
+        opacity: 15%;
+      }
+    }
+
+    h2 {
+      @include titulo($cor8, $cor9)
+    }
+
+    p {
+      font-family: "Roboto";
+      color: #666;
+      font-size: 0.9375em;
+      margin-top: 1.25em;
+      margin-bottom: 3em;
+    }
+  }
+
+  .agenda-bloco {
+    font-family: "Roboto";
+    color: #666;
+    padding: 0.93754em 0;
+    margin-bottom: 1.875em;
+
+    background: linear-gradient(#fff, #fff) padding-box, linear-gradient(45deg, $cor8, $cor9) border-box;
+    border-bottom: 3.5px solid transparent;
+
+        .agenda-flex {
+          margin-top: 1.25em;
+          display: grid;
+          grid-template-columns: 1fr 1fr 1fr;
+          row-gap: 0.9375em;
+          align-items: center;
+        }
+        
+        .domingo {
+          padding-bottom: 0.625em;
+          border-bottom: 2px solid $cor10;
+        }
+  }
+
 }
 
-.agenda-imagens {
-  display: flex;
-  flex-direction: column;
-  gap: 60px;
-  align-items: flex-start;
-  margin-bottom: 60px;
-}
-
-.agenda-container {
-  width: 55em;
-  grid-template-columns: 18.75em 1fr;
-  gap: 3.75em;
-}
-
-.agenda-container p {
-  font-family: "Roboto";
-  color: #666;
-  font-size: 0.9375em;
-  margin-top: 1.25em;
-}
-
-.agenda-bloco {
-  font-family: "Roboto";
-  color: #666;
-  padding: 0.93754em 0;
-  margin-bottom: 1.875em;
-
-  background: linear-gradient(#fff, #fff) padding-box, linear-gradient(45deg, $cor8, $cor9) border-box;
-  border-bottom: 3.5px solid transparent;
-}
-
-.agenda-flex {
-  margin-top: 1.25em;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  row-gap: 0.9375em;
-  align-items: center;
-}
-
-.agenda-container p {
-  margin-bottom: 3.75em;
-}
-
-.domingo {
-  padding-bottom: 0.625em;
-  border-bottom: 2px solid $cor10;
-}
 
 /* TAMANHOS VARIADOS DAS SUBMARCAS */
-.agenda-bloco img {
-  width: 6.25em;
-}
-
-.agenda-imagens .submarca-idv,
-.agenda-imagens .submarca-kids,
-.agenda-imagens .submarca-celebrando,
-.agenda-imagens .submarca-cafe {
-  width: 200px;
-  filter: brightness(0);
-  opacity: 15%;
-
-}
 
 .agenda-bloco a .icone-instagram {
   width: .9375em;
