--- a/assets/sass/_app.scss
+++ b/assets/sass/_app.scss
@@ -2,50 +2,63 @@
   background-color: $cor10;
   padding: 4.0625em;
 
+  &_container {
+    @include container;
+
+    .video-app {
+      box-shadow: 0px 0px 0px 10px $cor10;
+      border-radius: 15px;
+    }
+
+    &_info {
+      display: flex;
+      flex-direction: column;
+      place-items: start;
+      justify-self: center;
+      justify-content: space-between;
+      width: 22.5em;
+      padding: 0px 1.25em 0 .625em;
+
+      h2 {
+        @include titulo($cor4, $cor5)
+      }
+
+      p {
+        font-family: "Roboto";
+        color: #666;
+        font-size: 0.9375em;
+      }
+    
+
+      .btn-app {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 0.625em;
+
+        .btn-app-store,
+        .btn-google-store {
+          text-decoration: none;
+          color: #000;
+          font-family: "Roboto";
+          font-weight: 500;
+
+          background: linear-gradient($cor10, $cor10) padding-box, linear-gradient(45deg, $cor4, $cor5) border-box;
+          border: 2.5px solid transparent;
+          border-radius: 10px;
+          padding: 3px 8px;
+          display: flex;
+          align-items: center;
+          gap: 5px;
+            
+            .logo-apple {
+              font-size: 2.1875em;
+              color: #000;
+        }       
+      }
+    }
+  }
+}
 }
 
-.app-informacoes {
-  width: 28.125em;
-  justify-self: end;
-  gap: 0.9375em;
-}
 
-.app-informacoes p {
-  font-family: "Roboto";
-  color: #666;
-  font-size: 0.9375em;
-}
 
-.btn-app {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 0.625em;
-}
-
-.btn-app a {
-  text-decoration: none;
-  color: #000;
-  font-family: "Roboto";
-  font-weight: 500;
-}
-
-.logo-apple {
-  font-size: 2.1875em;
-  color: #000;
-}
-
-.btn-app-store,
-.btn-google-store {
-  background: linear-gradient($cor10, $cor10) padding-box, linear-gradient(45deg, $cor4, $cor5) border-box;
-  border: 3.5px solid transparent;
-  border-radius: 10px;
-  padding: 5px 10px;
-  display: flex;
-  align-items: center;
-  gap: 5px;
-}
-
-.video-app {
-  box-shadow: 0px 0px 0px 10px $cor10;
-  border-radius: 15px;
-}
