--- a/assets/sass/_dizimos.scss
+++ b/assets/sass/_dizimos.scss
@@ -1,28 +1,34 @@
 .dizimos {
   padding: 60px;
   background-color: $cor10;
+  padding-bottom: 100px;
+
+  h2{
+    grid-column: 1/4;
+    margin-bottom: 30px;
+    margin-left: 200px;
+    @include titulo($cor6, $cor2)
+    
+  }
+  
+      &_container {
+        width: 55em;
+        font-family: "Roboto";
+        color: $cor1;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        column-gap: 80px;
+        margin: auto;
+
+        div{
+          border-right: 1px solid $cor3;
+        }
+  }
+  .dizimos_flex {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    justify-content: center;
+  }
 }
 
-.dizimos-container {
-  width: 55em;
-  font-family: "Roboto";
-  color: var(--cor1);
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  column-gap: 80px;
-}
-
-.dizimos-container div {
-  border-right: 1px solid $cor3;
-}
-
-.dizimos-container h2 {
-  grid-column: 1/4;
-}
-
-.dizimos-flex {
-  display: flex;
-  flex-direction: column;
-  gap: 5px;
-  justify-content: center;
-}
