--- a/assets/sass/_areas.scss
+++ b/assets/sass/_areas.scss
@@ -5,11 +5,11 @@
         flex-wrap: wrap;
         margin: auto;
         display: grid;
-        grid-template-columns: 10em 10em 10em 10em 10em 10em 10em;
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
         justify-items: center;
         align-items: center;
-        gap: 20px;
-
+        gap: 20px;   
+           
           img {
             width: 130px;
             padding: 10px;
