--- a/assets/sass/_header.scss
+++ b/assets/sass/_header.scss
@@ -1,15 +1,26 @@
 .header{
-  max-width: 120em;
+  max-width: 100%;
   height: 6.25em;
   background-color: $cor1;
+
+  &_img_logo2{
+    display: none;
+  }
 
     &_menu{
       max-width: 68.75em;
       margin: 0 auto;
       height: 6.25em;
-      display: grid;
+      display: grid; 
       grid-template-columns: auto 1fr;
       align-items: center;
+      
+      @media (max-width: 1200px){
+        grid-template-columns: 1fr;
+        margin: 0 auto;
+        justify-items: center;      
+          
+      }
 
       &_logo{
         margin-top: 0.625em;
@@ -19,6 +30,7 @@
 
 .header_menu_link {
     display: flex;
+    flex-wrap: wrap;
     justify-content: flex-end;
     gap: 0.9375em;
     list-style: none;
