--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,8 +4,7 @@
   box-sizing: border-box; }
 
 body {
-  font-family: 'Sora';
-  font-size: 16px; }
+  font-family: 'Sora'; }
 
 /* 
 0 - 600px: phone
@@ -27,11 +26,14 @@ body {
     display: grid;
     grid-template-columns: auto 1fr;
     align-items: center; }
-    @media (max-width: 1200px) {
+    @media (max-width: 1100px) {
       .header_menu {
         grid-template-columns: 1fr;
         margin: 0 auto;
-        justify-items: center; } }
+        justify-items: center; }
+        .header_menu .header_menu_link {
+          font-size: 14px;
+          gap: 10px; } }
     .header_menu_logo {
       margin-top: 0.625em; }
 
@@ -58,6 +60,9 @@ body {
   max-width: 68.75em;
   height: calc(90vh - 80px);
   overflow: hidden; }
+  @media (max-width: 1100px) {
+    .galery {
+      max-width: 900px; } }
   .galery_fotos {
     width: 500%;
     animation-name: animacao;
@@ -93,6 +98,33 @@ body {
     margin: auto;
     display: grid;
     grid-template-columns: 1fr 1fr; }
+    @media (max-width: 1100px) {
+      .video_container {
+        width: 800px; } }
+    @media (max-width: 900px) {
+      .video_container {
+        margin: auto; }
+        .video_container .video_horario {
+          justify-content: start;
+          gap: 50px; }
+        .video_container .video_horario h2 {
+          font-size: 25px; } }
+    @media (max-width: 800px) {
+      .video_container {
+        margin: auto;
+        grid-template-columns: 1fr;
+        gap: 40px;
+        justify-content: center; }
+        .video_container .video_horario {
+          display: grid;
+          grid-template-columns: 1fr 1fr;
+          row-gap: 30px; }
+          .video_container .video_horario div {
+            align-self: center; }
+          .video_container .video_horario h2 {
+            grid-column: 1/-1; }
+        .video_container .video-culto {
+          justify-self: center; } }
   .video_horario {
     display: flex;
     flex-direction: column;
@@ -162,6 +194,22 @@ body {
     margin: auto;
     display: grid;
     grid-template-columns: 1fr 1fr; }
+    @media (max-width: 1100px) {
+      .app_container {
+        width: 800px; } }
+    @media (max-width: 900px) {
+      .app_container .app_container_info h2 {
+        font-size: 25px; } }
+    @media (max-width: 800px) {
+      .app_container {
+        margin: auto;
+        grid-template-columns: 1fr;
+        gap: 40px;
+        justify-content: center; }
+        .app_container .app_container_info {
+          gap: 20px; }
+        .app_container .app-video {
+          justify-self: center; } }
     .app_container .video-app {
       box-shadow: 0px 0px 0px 10px #F0EEEE;
       border-radius: 15px; }
@@ -218,6 +266,9 @@ body {
     grid-template-columns: 18.75em 1fr;
     margin: auto;
     gap: 3.75em; }
+    @media (max-width: 1100px) {
+      .agenda_container {
+        width: 800px; } }
     .agenda_container_imagens {
       display: flex;
       flex-direction: column;
@@ -280,6 +331,10 @@ body {
     justify-items: center;
     align-items: center;
     gap: 20px; }
+    @media (max-width: 1100px) {
+      .areas .areas_container {
+        grid-template-columns: 1fr 1fr 1fr;
+        width: 800px; } }
     .areas .areas_container img {
       width: 130px;
       padding: 10px; }
@@ -326,6 +381,10 @@ body {
     grid-template-columns: 1fr 1fr 1fr;
     column-gap: 80px;
     margin: auto; }
+    @media (max-width: 1200px) {
+      .dizimos_container {
+        margin: auto;
+        width: 800px; } }
     .dizimos_container div {
       border-right: 1px solid #ee2737; }
   .dizimos .dizimos_flex {
@@ -346,6 +405,10 @@ body {
     grid-template-columns: 1fr 1fr 1fr;
     margin: auto;
     align-items: center; }
+    @media (max-width: 1200px) {
+      .footer_container {
+        margin: auto;
+        width: 800px; } }
     .footer_container img {
       width: 200px; }
   .footer_flex {
