--- a/assets/sass/_agenda.scss
+++ b/assets/sass/_agenda.scss
@@ -8,6 +8,10 @@
     margin: auto;
     gap: 3.75em;
 
+    @media (max-width: 1100px){
+      width: 800px;
+ }
+
     &_imagens {
       display: flex;
       flex-direction: column;
@@ -20,6 +24,8 @@
         filter: brightness(0);
         opacity: 15%;
       }
+
+
     }
 
     h2 {
