--- a/assets/sass/_app.scss
+++ b/assets/sass/_app.scss
@@ -5,6 +5,30 @@
   &_container {
     @include container;
 
+    @media (max-width: 1100px) {
+      width: 800px;
+    }
+
+    @media (max-width: 900px) {
+      .app_container_info h2{
+        font-size: 25px;
+      }
+    }
+
+    @media (max-width: 800px){
+      margin: auto;
+      grid-template-columns: 1fr;
+      gap: 40px;
+      justify-content: center;
+
+      .app_container_info{
+        gap: 20px;
+      }
+      .app-video{
+        justify-self: center;
+      }
+    }
+
     .video-app {
       box-shadow: 0px 0px 0px 10px $cor10;
       border-radius: 15px;
@@ -28,7 +52,7 @@
         color: #666;
         font-size: 0.9375em;
       }
-    
+
 
       .btn-app {
         display: grid;
@@ -49,16 +73,13 @@
           display: flex;
           align-items: center;
           gap: 5px;
-            
-            .logo-apple {
-              font-size: 2.1875em;
-              color: #000;
-        }       
+
+          .logo-apple {
+            font-size: 2.1875em;
+            color: #000;
+          }
+        }
       }
     }
   }
 }
-}
-
-
-
