--- a/assets/sass/_areas.scss
+++ b/assets/sass/_areas.scss
@@ -9,6 +9,12 @@
         justify-items: center;
         align-items: center;
         gap: 20px;   
+
+        @media (max-width: 1100px){
+          grid-template-columns: 1fr 1fr 1fr;
+          width: 800px;
+      
+        }
            
           img {
             width: 130px;
