--- a/assets/sass/_dizimos.scss
+++ b/assets/sass/_dizimos.scss
@@ -3,6 +3,8 @@
   background-color: $cor10;
   padding-bottom: 100px;
 
+
+
   h2{
     grid-column: 1/4;
     margin-bottom: 30px;
@@ -18,6 +20,11 @@
         grid-template-columns: 1fr 1fr 1fr;
         column-gap: 80px;
         margin: auto;
+
+        @media (max-width: 1200px){
+          margin: auto;
+          width: 800px;
+      }
 
         div{
           border-right: 1px solid $cor3;
