--- a/assets/sass/_header.scss
+++ b/assets/sass/_header.scss
@@ -1,53 +1,58 @@
-.header{
+.header {
   max-width: 100%;
   height: 6.25em;
   background-color: $cor1;
 
-  &_img_logo2{
+  &_img_logo2 {
     display: none;
   }
 
-    &_menu{
-      max-width: 68.75em;
-      margin: 0 auto;
-      height: 6.25em;
-      display: grid; 
-      grid-template-columns: auto 1fr;
-      align-items: center;
-      
-      @media (max-width: 1200px){
-        grid-template-columns: 1fr;
-        margin: 0 auto;
-        justify-items: center;      
-          
-      }
+  &_menu {
+    max-width: 68.75em;
+    margin: 0 auto;
+    height: 6.25em;
+    display: grid;
+    grid-template-columns: auto 1fr;
+    align-items: center;
 
-      &_logo{
-        margin-top: 0.625em;
+     @media (max-width: 1100px) {
+      grid-template-columns: 1fr;
+      margin: 0 auto;
+      justify-items: center;
+
+      .header_menu_link{
+        font-size: 14px;
+        gap: 10px;
       }
+    }
+
+      &_logo {
+      margin-top: 0.625em;
+    }
+  }
+}
+
+.header_menu_link {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+  gap: 0.9375em;
+  list-style: none;
+
+  a {
+    display: inline-block;
+    font-family: 'Sora';
+    color: #fff;
+    text-decoration: none;
+    padding: 0.625em 1.25em;
+
+    &:hover:not(.link-ofertas) {
+      color: $cor2;
     }
   }
 
-.header_menu_link {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-end;
-    gap: 0.9375em;
-    list-style: none;
-
-      a{
-        display: inline-block;
-        font-family: 'Sora';
-        color: #fff;
-        text-decoration: none;
-        padding: 0.625em 1.25em;
-
-        &:hover:not(.link-ofertas){
-          color: $cor2;
-        }
-    }
-    .link-ofertas {
-      background: linear-gradient(120deg, $cor3, $cor2);
-      border-radius: 5px;
-    }
+  .link-ofertas {
+    background: linear-gradient(120deg, $cor3, $cor2);
+    border-radius: 5px;
+  }
 }
