--- a/assets/sass/_video.scss
+++ b/assets/sass/_video.scss
@@ -3,6 +3,46 @@
 
   &_container {
     @include container;
+
+    @media (max-width: 1100px) {
+      width: 800px;
+    }
+
+    @media (max-width: 900px) {
+     margin: auto;
+      .video_horario{
+        justify-content: start;
+        gap: 50px;
+      }
+      .video_horario h2{
+        font-size: 25px;
+      }
+  }
+
+  @media (max-width:800px){
+      margin: auto;
+      grid-template-columns: 1fr;
+      gap: 40px;
+      justify-content: center;
+
+      .video_horario{
+       display: grid;
+       grid-template-columns: 1fr 1fr;
+       row-gap: 30px;
+       div{
+        align-self: center;
+       }
+
+       h2{
+        grid-column: 1/-1;
+       }
+      }
+
+      .video-culto{
+        justify-self: center;
+      }
+  }
+
   }
 
   &_horario {
@@ -13,6 +53,8 @@
     justify-content: space-between;
     width: 22.5em;
     padding: 0px 1.25em 0 .625em;
+    
+  
 
     h2 {
       @include titulo($cor9, $cor8)
